fix table on small screen

--- a/src/pages/Ranks/style.scss
+++ b/src/pages/Ranks/style.scss
@@ -1,8 +1,9 @@
 $blue: #1f4689;
 .ranks-outer {
-  max-height: 500px;
+  max-height: 700px;
   overflow-y: scroll;
   margin-top: 24px;
+  max-width: 100%;
 }
 .ranks {
   max-width: 100%;
